tests/should-fail/vardecl-missing-equal.j
globals
    boolean B true
endglobals